--- a/app/globals.css
+++ b/app/globals.css
@@ -127,3 +127,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+ul {
+  @apply list-disc list-inside;
+}
+
+ol {
+  @apply list-decimal list-inside;
+}
